Fix spacing of login page

--- a/src/Pages/Login.css
+++ b/src/Pages/Login.css
@@ -80,6 +80,7 @@ button[type="submit"]{
     .login {
       width: 100%;
       height: 100vh;
+      padding-bottom: 5rem;
       display: flex;
       flex-direction: column;
       background-image: url("../floatmellow_background.svg");
@@ -123,6 +124,10 @@ button[type="submit"]{
       width: 20%;
       padding: 2rem 0;
       align-self: initial;
+    }
+
+    .login {
+      padding-bottom: 0;
     }
   
     .login-heading {
